--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,9 +7,9 @@ import Card from '../components/Card.astro';
 	<main>
 		<svg
 			class="astro-a"
-			width="495"
-			height="623"
-			viewBox="0 0 495 623"
+			width="248"
+			height="312"
+			viewBox="0 0 248 312"
 			fill="none"
 			xmlns="http://www.w3.org/2000/svg"
 			aria-hidden="true"
@@ -42,10 +42,10 @@ import Card from '../components/Card.astro';
             that be turning lines of code into a program, assembling bones into a rig, or taking disparate mechanics and turning them into a fun game. I followed this passion into college and am 
             looking to use my passion and collected knowledge to work on software and video games.
         </p>
-        <p>   
+        <p class="indented-paragraph">   
             I have knowledge of  C#, C++, SQL, Python, Unity, Unreal, Jira, and Agile Methodology.
         </p>
-        <p>
+        <p class = "indented-paragraph">
             Driven by the goal of getting better every day, I am committed to learning all I can and improvement via iteration. I am eager to collaborate with like-minded people to create well
             made products that are satisfying for the user. I love productivity content and art of all kinds and can usually be found doing some kind of creative hobby on the weekends.
 		</p>
@@ -111,8 +111,10 @@ import Card from '../components/Card.astro';
 		padding: 0;
 	}
     .indented-paragraph{
-        width: 400px;
-        max-width: calc(100% - 4rem);
+        width: 500px;
+        max-width: calc(100% - 3rem);
+		position: relative;
+		left: 20rem;
     }
 
 </style>
