Got to Step 2.2 in Astro tutorial

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -33,11 +33,13 @@ import Card from '../components/Card.astro';
 				</linearGradient>
 			</defs>
 		</svg>
+		<a href="/">Home</a>
+		<a href="/about/">About</a>
+		<a href="/blog/">Blog</a>
 		<h2 class="instructions"> Looking for a <span class="text-gradient"> motivated, Agile knowledgable C#, C++ and Python programmer and game designer</span> who loves honing her craft?</h2>
 		<h2 class="instructions"> Look no farther</h2>
         <img src="../favicon.svg" alt="placeholder image">
         <p class="indented-paragraph">
-            
 			From a young age I've always loved the feeling of creating things. Putting together small parts and making them work together has always been a magical, satisfying experience, whether 
             that be turning lines of code into a program, assembling bones into a rig, or taking disparate mechanics and turning them into a fun game. I followed this passion into college and am 
             looking to use my passion and collected knowledge to work on software and video games.
