--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -7,9 +7,9 @@ import Card from '../components/Card.astro';
 	<main>
 		<svg
 			class="astro-a"
-			width="495"
-			height="623"
-			viewBox="0 0 495 623"
+			width="248"
+			height="312"
+			viewBox="0 0 248 312"
 			fill="none"
 			xmlns="http://www.w3.org/2000/svg"
 			aria-hidden="true"
@@ -35,34 +35,12 @@ import Card from '../components/Card.astro';
 		</svg>
 		<a href="/">Home</a>
 		<a href="/about/">About</a>
-		<a href="/blog/">Blog</a>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
+        <a href="/blog/">Blog</a>
+
+		<h1>My Astro Site</h1>
+        <h1>My Astro Learning Blog</h1>
+        <p>This is where I will post about my journey learning Astro.</p>
+		
 	</main>
 </Layout>
 
@@ -123,4 +101,11 @@ import Card from '../components/Card.astro';
 		gap: 2rem;
 		padding: 0;
 	}
+    .indented-paragraph{
+        width: 500px;
+        max-width: calc(100% - 3rem);
+		position: relative;
+		left: 20rem;
+    }
+
 </style>
