--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,9 +1,14 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
+import '../styles/global.css'
+
+const pageTitle = "My Thoughts";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title={pageTitle}>
 	<main>
 		<svg
 			class="astro-a"
@@ -33,14 +38,23 @@ import Card from '../components/Card.astro';
 				</linearGradient>
 			</defs>
 		</svg>
-		<a href="/">Home</a>
-		<a href="/about/">About</a>
-        <a href="/blog/">Blog</a>
+		
+		<Header/>
 
 		<h1>My Astro Site</h1>
         <h1>My Astro Learning Blog</h1>
         <p>This is where I will post about my journey learning Astro.</p>
 		
+		<ul>
+			<li><a href="/posts/post-1/">Post 1</a></li>
+			<li><a href="/posts/post-2/">Post 2</a></li>
+      		<li><a href="/posts/post-3/">Post 3</a></li>
+		  </ul>
+
+		  <Footer/>
+		  <script>
+			  import '../scripts/menu.js'
+			</script>
 	</main>
 </Layout>
 
