--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,14 +1,16 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import BaseLayout from '../layouts/BaseLayout.astro';
 import Card from '../components/Card.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import '../styles/global.css'
 
 const pageTitle = "My Thoughts";
+const allPosts = await Astro.glob('./posts/*.md');
 ---
 
-<Layout title={pageTitle}>
+<BaseLayout pageTitle={pageTitle}>
 	<main>
 		<svg
 			class="astro-a"
@@ -46,17 +48,15 @@ const pageTitle = "My Thoughts";
         <p>This is where I will post about my journey learning Astro.</p>
 		
 		<ul>
-			<li><a href="/posts/post-1/">Post 1</a></li>
-			<li><a href="/posts/post-2/">Post 2</a></li>
-      		<li><a href="/posts/post-3/">Post 3</a></li>
-		  </ul>
+			{allPosts.map((post) => <li><a href={post.url}>{post.frontmatter.title}</a></li>)}
+		</ul>
 
 		  <Footer/>
 		  <script>
 			  import '../scripts/menu.js'
 			</script>
 	</main>
-</Layout>
+</BaseLayout>
 
 <style>
 	main {
