--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -3,16 +3,18 @@ interface Props {
 	title: string;
 	body: string;
 	href: string;
+	image: string;
 }
 
-const { href, title, body } = Astro.props;
+const { href, title, body, image } = Astro.props;
 ---
 
+<img class="card__img" width="226" height="127" src={image} alt="project image"
 <li class="link-card">
 	<a href={href}>
 		<h2>
 			{title}
-			<span>&rarr;</span>
+			
 		</h2>
 		<p>
 			{body}
