--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,33 +11,15 @@ const pageTitle = "Home Page";
 <BaseLayout pageTitle={pageTitle}>
 	<main>
 
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			Coming Soon
-		</p>
-		<ul role="list" class="link-card-grid">
-			<!-- <Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-			-->
-		</ul>
+		<h1>Welcome to my corner of the internet</h1>
+		
+		<img width="300" height="400" src="/public/Self-Portrait-1.png" alt="a self portrait">
+        <p>
+			From a young age I've always loved the feeling of creating things. Putting together small parts and making them work together has always been a magical, satisfying experience, whether 
+            that be turning lines of code into a program or taking disparate mechanics and turning them into a fun game. I am 
+            looking to use my passion and collected knowledge to work on software and video games.
+        </p>
+		
 		<script>
 			import '../scripts/menu.js'
 		  </script>
@@ -47,9 +29,9 @@ const pageTitle = "Home Page";
 <style>
 	main {
 		margin: auto;
-		padding: 1rem;
+		padding: 1%;
 		width: 800px;
-		max-width: calc(100% - 2rem);
+		max-width: calc(100% - 1%);
 		color: white;
 		font-size: 20px;
 		line-height: 1.6;
@@ -69,6 +51,10 @@ const pageTitle = "Home Page";
 		line-height: 1;
 		text-align: center;
 		margin-bottom: 1em;
+	}
+	img {
+    float:left;
+	padding: 2%;
 	}
 	.text-gradient {
 		background-image: var(--accent-gradient);
