--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -32,6 +32,26 @@ html {
     font-size: 2.5rem;
   }
 
+  /*Cards*/
+  .card {
+    list-style: inside;
+    display: flex;
+    background-size: 400%;
+    padding: 20px;
+  }
+  .card-link{
+    width: 100%;
+    text-decoration: none;
+    line-height: 1.4;
+    border-radius: 8px;
+    
+  }
+  .link-card-grid{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(24ch, 1fr));
+    padding: 0;
+  }
+
   /* nav styles */
 
 .nav-links {
