fixed image issue and changed linkedin link to image

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,5 +4,6 @@ const platform = "linkedin";
 ---
 
 <footer>
-  <p>Connect with me on <a href={`https://www.linkedin.com/in/campbell-j-turner/`}>{platform}</a>!</p>
+ 
+<a href={`https://www.linkedin.com/in/campbell-j-turner/`}><img src="/linkedin-app-white-icon.webp" alt="connect with me on linkedin" style="width:42px;height:42px;" ></a>
 </footer>
