--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ const pageTitle = "Home Page";
 
 		<h1>Welcome to my corner of the internet</h1>
 		
-		<img width="300" height="400" src="/public/Self-Portrait-1.png" alt="a self portrait">
+		<img width="300" height="400" src="/Self-Portrait-1.png" alt="a self portrait">
         <p>
 			From a young age I've always loved the feeling of creating things. Putting together small parts and making them work together has always been a magical, satisfying experience, whether 
             that be turning lines of code into a program or taking disparate mechanics and turning them into a fun game. I am 
@@ -32,7 +32,6 @@ const pageTitle = "Home Page";
 		padding: 1%;
 		width: 800px;
 		max-width: calc(100% - 1%);
-		color: white;
 		font-size: 20px;
 		line-height: 1.6;
 	}
