--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,7 +8,7 @@
     width: 40px;
     height: 5px;
     margin-bottom: 10px;
-    background-color: #ff9776;
+    background-color: #39231c;
   }
 html {
     background-color:rgb(116, 89, 58);
@@ -19,6 +19,7 @@ html {
     margin: 0 auto;
     width: 100%;
     max-width: 80ch;
+    color: rgb(255, 255, 238);
     padding: 1rem;
     line-height: 1.5;
   }
@@ -30,8 +31,13 @@ html {
   h2 {
     margin: 1rem 0;
     font-size: 2.5rem;
+    color: rgb(255, 255, 238);
   }
 
+  footer
+  {
+    
+  }
   /*Cards*/
   .card {
     list-style: inside;
@@ -52,13 +58,14 @@ html {
     padding: 0;
   }
 
+
   /* nav styles */
 
 .nav-links {
     width: 100%;
     top: 5rem;
     left: 48px;
-    background-color: #ff9776;
+    color: rgb(255, 255, 238);
     display: none;
     margin: 0;
   }
@@ -71,11 +78,12 @@ html {
     font-size: 1.2rem;
     font-weight: bold;
     text-transform: uppercase;
+    color: rgb(255, 255, 238);
   }
   
   .nav-links a:hover,
   .nav-links a:focus {
-    background-color: #ff9776;
+    background-color: #39231c;
   }
   
   .expanded {
