--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -8,50 +8,54 @@ interface Props {
 
 const { href, title, body, image } = Astro.props;
 ---
-<li class="card">
-<img class="card-img" width="226" height="127" src={image} alt="project image"
-<li class="link-card">
-	<a href={href}>
-		<h2>
-			{title}
+
+	<li class="link-card">
+		<a href={href}>
+			<img class="card-img" src={image} alt="project image">
+				<h2>
+					{title}
 			
-		</h2>
-		<p>
-			{body}
-		</p>
-	</a>
-</li>
-</li>
+				</h2>
+				<p>
+					{body}
+				</p>
+			</img>
+		</a>
+	</li>
+
 <style>
 	.link-card {
 		list-style: none;
 		display: flex;
-		padding: 1px;
-		background-color: #23262d;
+		background-color: rgb(30, 19, 6);
 		background-image: none;
-		background-size: 400%;
+		width:calc(20rem);
+		color:white;
 		border-radius: 7px;
-		background-position: 100%;
+		background-position: 70%;
+		opacity: .7;
 		transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
 		box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.1);
 	}
 	.link-card > a {
-		width: 100%;
 		text-decoration: none;
 		line-height: 1.4;
-		padding: calc(1.5rem - 1px);
-		border-radius: 8px;
+		padding: calc(1rem - 1px);
+		width: calc(22rem);
 		color: white;
-		background-color: #23262d;
 		opacity: 0.8;
+		
 	}
 	h2 {
-		margin: 0;
+		text-align: left;
 		font-size: 1.25rem;
+		margin-bottom: .05rem;
+		color: rgb(228, 157, 126);
 		transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
 	}
 	p {
-		margin-top: 0.5rem;
+		text-align: left;
+		margin-top: 0;
 		margin-bottom: 0;
 	}
 	.link-card:is(:hover, :focus-within) {
