--- a/src/layouts/MarkdownLayout.astro
+++ b/src/layouts/MarkdownLayout.astro
@@ -3,8 +3,55 @@ import BaseLayout from './BaseLayout.astro';
 const { frontmatter } = Astro.props;
 ---
 <BaseLayout pageTitle={frontmatter.title}>
-    
     <p>Written by {frontmatter.author}</p>
     <p>Published on: {frontmatter.pubDate.toString().slice(0,10)}</p>
-    <slot />
+    
+    <div class="tags">
+        {frontmatter.tags.map((tag) => (
+          <p class="tag"><a href={`/tags/${tag}`}>{tag}</a></p>
+        ))}
+      </div>
+
+    <div>
+        <slot />
+    </div>
+    
 </BaseLayout>
+<style>
+    p {
+        font-size: .75rem;
+        line-height: 1;
+    }
+    div{
+        background-color: white;
+        color:  rgb(30, 19, 6);
+        padding: 1em;
+        border-style: dotted;
+            
+    }
+    .backing {
+        background-color: white;
+    }
+
+    a {
+    color:  rgb(228, 157, 126);
+    text-decoration: none;
+    font-weight: 100;
+    }
+
+    a:hover,
+    a:focus {
+    color: rgb(30, 19, 6);;
+    }
+
+  .tags {
+    display: flex;
+    }
+    
+
+  .tag {
+    margin: 0.25em;
+    padding: .5em 1em;
+    font-size: 1.15em;
+  }
+</style>
