--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -6,21 +6,27 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import '../styles/global.css'
 
+
 const pageTitle = "My Thoughts";
-const allPosts = await Astro.glob('./posts/*.md');
+const allPosts = await Astro.glob('./blog/*.md');
 ---
 
 <BaseLayout pageTitle={pageTitle}>
 	<main>
 		
-
-		<h1>My Astro Site</h1>
-        <h1>My Astro Learning Blog</h1>
-        <p>This is where I will post about my journey learning Astro.</p>
-		
-		<ul>
-			{allPosts.map((post) => <li><a href={post.url}>{post.frontmatter.title}</a></li>)}
+        <em>Where my musings on creativity, notes on process, and progress updates live</em>
+		<ul role="list" class="link-card-grid">
+			{allPosts.map((card) => <Card
+			title={card.frontmatter.title}
+			body={card.frontmatter.description}
+			href={`${card.frontmatter.title}`}
+			image={card.frontmatter.image.url}
+			/>)}
+			
 		</ul>
+		<!--<ul>
+			{allPosts.map((post) => <li><a href={post.url}>{post.frontmatter.title}</a></li>)}
+		</ul>-->
 
 		  
 		  <script>
@@ -33,20 +39,12 @@ const allPosts = await Astro.glob('./posts/*.md');
 	main {
 		margin: auto;
 		padding: 1rem;
+		padding-top: 0%;
 		width: 800px;
-		max-width: calc(100% - 2rem);
+		max-width: calc(600% - 2rem);
 		color: white;
 		font-size: 20px;
 		line-height: 1.6;
-	}
-	.astro-a {
-		position: absolute;
-		top: -32px;
-		left: 50%;
-		transform: translatex(-50%);
-		width: 220px;
-		height: auto;
-		z-index: -1;
 	}
 	h1 {
 		font-size: 4rem;
@@ -54,6 +52,15 @@ const allPosts = await Astro.glob('./posts/*.md');
 		line-height: 1;
 		text-align: center;
 		margin-bottom: 1em;
+	}
+	em {
+		color: rgb(228, 157, 126);
+		font-size: 1.5rem;
+		font-weight: 200;
+		line-height: 1;
+		text-align: left;
+		margin-bottom: 1.5rem;
+		
 	}
 	.text-gradient {
 		background-image: var(--accent-gradient);
@@ -80,17 +87,5 @@ const allPosts = await Astro.glob('./posts/*.md');
 	.instructions strong {
 		color: rgb(var(--accent-light));
 	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 2rem;
-		padding: 0;
-	}
-    .indented-paragraph{
-        width: 500px;
-        max-width: calc(100% - 3rem);
-		position: relative;
-		left: 20rem;
-    }
 
 </style>
