--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -2,7 +2,7 @@
 import BaseLayout from '../../layouts/BaseLayout.astro';
 
 export async function getStaticPaths() {
-  const allPosts = await Astro.glob('../posts/*.md');
+  const allPosts = await Astro.glob('../blog/*.md');
   const uniqueTags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())];
   return uniqueTags.map((tag) => {
     const filteredPosts = allPosts.filter((post) => post.frontmatter.tags.includes(tag));
@@ -19,8 +19,31 @@ const { tag } = Astro.params;
 const { posts } = Astro.props;
 ---
 <BaseLayout pageTitle={tag}>
-  <p>Posts tagged with {tag}</p>
-  <ul>
-    {posts.map((post) => <li><a href={post.url}>{post.frontmatter.title}</a></li>)}
+  <p>Posts tagged with "{tag}"</p>
+
+  <ul class="back">
+    {posts.map((post) => <ul><a href={post.url}>{post.frontmatter.title}</a></ul>)}
   </ul>
 </BaseLayout>
+
+<style>
+  .back{
+    background-color: white;
+        
+        padding: 1em;
+        border-style: dotted
+  }
+  ;
+  ul{
+    padding-left: 2ch;
+  }
+  a{
+    color:  rgb(30, 19, 6);
+    font-weight: bold;
+    text-decoration: none;
+  }
+  a:hover,
+  a:focus {
+    color: rgb(228, 157, 126);
+  }
+</style>
