--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,10 +8,10 @@
     width: 40px;
     height: 5px;
     margin-bottom: 10px;
-    background-color: #39231c;
+    background-color: rgb(228, 157, 126);
   }
 html {
-    background-color:rgb(116, 89, 58);
+    background-color:rgb(54, 35, 12);
     font-family: sans-serif;
   }
   
@@ -31,49 +31,44 @@ html {
   h2 {
     margin: 1rem 0;
     font-size: 2.5rem;
-    color: rgb(255, 255, 238);
+    color: rgb(228, 157, 126);
   }
 
-  footer
-  {
-    
-  }
   /*Cards*/
   .card {
-    list-style: inside;
-    display: flex;
-    background-size: 400%;
-    padding: 20px;
-  }
-  .card-link{
-    width: 100%;
-    text-decoration: none;
-    line-height: 1.4;
-    border-radius: 8px;
     
+    background-size: 300%;
+    padding: 20px;
   }
   .link-card-grid{
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(24ch, 1fr));
+    grid-template: 
+    "link-card link-card";
+    grid-template-columns: 23rem;
     padding: 0;
   }
-
+  .card-img{
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+    width:40%; 
+  }
 
   /* nav styles */
 
 .nav-links {
     width: 100%;
     top: 5rem;
-    left: 48px;
     color: rgb(255, 255, 238);
     display: none;
-    margin: 0;
+    text-align: center;
+    
   }
   
   .nav-links a {
-    display: block;
+    display: flexbox;
     text-align: center;
-    padding: 10px 0;
+    margin:auto;
     text-decoration: none;
     font-size: 1.2rem;
     font-weight: bold;
@@ -83,7 +78,7 @@ html {
   
   .nav-links a:hover,
   .nav-links a:focus {
-    background-color: #39231c;
+    color: rgb(228, 157, 126);
   }
   
   .expanded {
