--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -4,11 +4,12 @@ interface Props {
 	body: string;
 	href: string;
 	image: string;
+	pubDate: Date;
 }
 
 const { href, title, body, image } = Astro.props;
 ---
-
+<div>
 	<li class="link-card">
 		<a href={href}>
 			<img class="card-img" src={image} alt="project image">
@@ -16,21 +17,23 @@ const { href, title, body, image } = Astro.props;
 					{title}
 			
 				</h2>
-				<p>
-					{body}
-				</p>
+				
 			</img>
 		</a>
+	
 	</li>
-
+	<p style="padding-right: 4ch;">
+		{body}
+	</p>
+</div>
 <style>
 	.link-card {
-		list-style: none;
-		display: flex;
-		background-color: rgb(30, 19, 6);
+		list-style:none;
+		display:list-item;
+		padding-top: 1em;
+		background-color: rgb(40, 25, 7);
 		background-image: none;
 		width:calc(20rem);
-		color:white;
 		border-radius: 7px;
 		background-position: 70%;
 		opacity: .7;
@@ -40,22 +43,21 @@ const { href, title, body, image } = Astro.props;
 	.link-card > a {
 		text-decoration: none;
 		line-height: 1.4;
-		padding: calc(1rem - 1px);
+		padding-top: calc(1rem - 1px);
 		width: calc(22rem);
 		color: white;
 		opacity: 0.8;
 		
 	}
 	h2 {
-		text-align: left;
+		text-align: center;
 		font-size: 1.25rem;
-		margin-bottom: .05rem;
 		color: rgb(228, 157, 126);
 		transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
 	}
 	p {
 		text-align: left;
-		margin-top: 0;
+		margin-top: -.5ch;
 		margin-bottom: 0;
 	}
 	.link-card:is(:hover, :focus-within) {
