--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,8 @@ const platform = "linkedin";
 
 ---
 
-<footer>
- 
-<a href={`https://www.linkedin.com/in/campbell-j-turner/`}><img src="/linkedin-app-white-icon.webp" alt="connect with me on linkedin" style="width:42px;height:42px;" ></a>
-</footer>
+<footer style="text-align:center; padding-top:4ch">
+<a href={'https://www.tumblr.com/theartofgaming'}> <span style="font-size:xx-large; color:white; margin:auto"><i class="fa-solid fa-user"></i></span></a>
+<a href={`https://www.linkedin.com/in/campbell-j-turner/`}> <span style="font-size:xx-large; color:white; margin:auto"><i class="fa-brands fa-linkedin"></i></span></a>
+<a href={`https://bsky.app/profile/theartofgaming.bsky.social`}> <span style="font-size:xx-large; color:white; margin:auto"><i class="fa-brands fa-bluesky"></i></span></a>
+</footer> 
