--- a/src/layouts/MarkdownLayout.astro
+++ b/src/layouts/MarkdownLayout.astro
@@ -6,18 +6,21 @@ const { frontmatter } = Astro.props;
     <p>Written by {frontmatter.author}</p>
     <p>Published on: {frontmatter.pubDate.toString().slice(0,10)}</p>
     
-    <div class="tags">
-        {frontmatter.tags.map((tag) => (
-          <p class="tag"><a href={`/tags/${tag}`}>{tag}</a></p>
-        ))}
-      </div>
-
     <div>
         <slot />
+    </div>
+
+    <div class="tags">
+      {frontmatter.tags.map((tag) => (
+        <p class="tag"><a href={`/tags/${tag}`}>{tag}</a></p>
+      ))}
     </div>
     
 </BaseLayout>
 <style>
+    b{
+      color: rgb(228, 157, 126)
+    }
     p {
         font-size: .75rem;
         line-height: 1;
@@ -46,6 +49,7 @@ const { frontmatter } = Astro.props;
 
   .tags {
     display: flex;
+    
     }
     
 
@@ -53,5 +57,9 @@ const { frontmatter } = Astro.props;
     margin: 0.25em;
     padding: .5em 1em;
     font-size: 1.15em;
+    outline-style:solid;
+    outline-width: 2px;
+    outline-color:  rgb(228, 157, 126);
+    border-radius: 5ch;
   }
 </style>
