--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -29,11 +29,9 @@ const { posts } = Astro.props;
 <style>
   .back{
     background-color: white;
-        
         padding: 1em;
-        border-style: dotted
+        border-style: dotted;
   }
-  ;
   ul{
     padding-left: 2ch;
   }
