--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -5,25 +5,26 @@ import Card from '../components/Card.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import '../styles/global.css'
+import Work from '../components/Work.astro';
 
 const pageTitle = "Portfolio";
-
+const allWorks = await Astro.glob('../pages/works/*.md');
 ---
 
 <BaseLayout title={pageTitle}>
 	<main>
         <p>This is where I keep my best projects.</p>
 		
-<!-- 
+
 		<ul role="list" class="link-card-grid">
-			{allWorks.map((card) => <Card
-			title={card.frontmatter.title}
-			body={card.frontmatter.description}
-			href={`works/${card.frontmatter.title}`}`
-			image={card.frontmatter.image.url}
+			{allWorks.map((works) => <Work
+			title={works.frontmatter.title}
+			body={works.frontmatter.description}
+			href={`works/${works.frontmatter.title}`}`
+			image={works.frontmatter.image.url}
 			/>)}
 		</ul>
--->
+
 		  <script>
 			  import '../scripts/menu.js'
 			</script>
