--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
 import Hamburger from "./Hamburger.astro"
 import Navigation from "./Navigation.astro"
 ---
-<header style="margin-left: -5rem;">
+<header>
     <nav>
         <Hamburger/>
         <Navigation/>
