began site revamp, finished sidebar layout, and started blog collection conversion

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,8 +3,11 @@ import Hamburger from "./Hamburger.astro"
 import Navigation from "./Navigation.astro"
 ---
 <header>
-    <nav>
-        <Hamburger/>
-        <Navigation/>
-    </nav>
+    <div class="header-content">
+	    <div class="header-title">Website Title</div>
+	    <nav>
+            <Hamburger/>
+            <Navigation/>
+        </nav> 	
+    </div>
 </header>
