--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,14 +3,12 @@ import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 import Header from '../components/Header.astro';
 import '../styles/global.css'
-import BaseLayout from '../layouts/BaseLayout.astro';
+import PersonalBaseLayout from '../layouts/PersonalBaseLayout.astro';
 
 const pageTitle = "Home Page";
 ---
 
-<BaseLayout pageTitle={pageTitle}>
-	<main>
-
+<PersonalBaseLayout pageTitle={pageTitle}>
 		<h1>Welcome to my corner of the internet</h1>
 		
 		<img width="300" height="400" src="/Self-Portrait-1.png" alt="a self portrait">
@@ -23,11 +21,11 @@ const pageTitle = "Home Page";
 		<script>
 			import '../scripts/menu.js'
 		  </script>
-	</main>
-</BaseLayout>
+	
+</PersonalBaseLayout>
 
 <style>
-	main {
+	/*main {
 		margin: auto;
 		padding: 1%;
 		width: 800px;
@@ -50,35 +48,10 @@ const pageTitle = "Home Page";
 		line-height: 1;
 		text-align: center;
 		margin-bottom: 1em;
-	}
+	}*/
 	img {
     float:left;
 	padding: 2%;
-	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
-	.instructions {
-		margin-bottom: 2rem;
-		border: 1px solid rgba(var(--accent-light), 25%);
-		background: linear-gradient(rgba(var(--accent-dark), 66%), rgba(var(--accent-dark), 33%));
-		padding: 1.5rem;
-		border-radius: 8px;
-	}
-	.instructions code {
-		font-size: 0.8em;
-		font-weight: bold;
-		background: rgba(var(--accent-light), 12%);
-		color: rgb(var(--accent-light));
-		border-radius: 4px;
-		padding: 0.3em 0.4em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent-light));
 	}
 	.link-card-grid {
 		display: grid;
