--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,18 +1,189 @@
 
+/* -------------------------------------------------------- */
+/* VARIABLES */
+/* -------------------------------------------------------- */
+
+/* Variables are used like this: var(--text-color) */
+:root {
+  /* Background Colors: */
+  --background-color: #36230c;
+  --content-background-color: #624112;
+  --sidebar-background-color: #624112;
+
+  /* Text Colors: */
+  --text-color: #fef2eb;
+  --sidebar-text-color: #fef2eb;
+  --link-color: #ffc7ca;
+  --link-color-hover: #ffe2ca;
+
+  /* Text: */
+  --font: Arial, sans-serif;
+  --heading-font: Georgia, serif;
+  --font-size: 14px;
+
+  /* Other Settings: */
+  --margin: 10px;
+  --padding: 20px;
+  --border: 2px solid #000000;
+  --round-borders: 10px;
+  --sidebar-width: 200px;
+}
+
 html {
     background-color:rgb(54, 35, 12);
     font-family: sans-serif;
   }
   
-  body {
-    margin: 0 auto;
-    width: 100%;
-    max-width: 80ch;
-    color: rgb(255, 255, 238);
-    padding: 1rem;
-    line-height: 1.5;
+  aside {
+  grid-area: aside;
+  border: var(--border);
+  border-radius: var(--round-borders);
+  overflow: hidden;
+  background: var(--sidebar-background-color);
+  padding: var(--padding);
+  color: var(--sidebar-text-color);
   }
+
+  .left-sidebar1 {
+  grid-area: leftSidebar1;
+  }
+
+  .left-sidebar2 {
+  grid-area: leftSidebar2;
+  }
+
+  .left-sidebar3 {
+  grid-area: leftSidebar3;
+  }
+
+  .left-sidebar4 {
+  grid-area: leftSidebar4;
+  }
+
+  .left-sidebar5 {
+  grid-area: leftSidebar5;
+  }
+
+  .left-sidebar6 {
+  grid-area: leftSidebar6;
+  }
+
+  .left-sidebar7 {
+  grid-area: leftSidebar;
+  }
+
+  .left-sidebar {
+  grid-area: leftSidebar;
+  }
+
+  .right-sidebar {
+  grid-area: rightSidebar;
+  }
+
+  .sidebar-title {
+  font-weight: bold;
+  font-size: 1.2em;
+  font-family: var(--heading-font);
+  }
+
+  .sidebar-section:not(:last-child) {
+  margin-bottom: 3em;
+  }
+
+  .sidebar-section ul,
+  .sidebar-section ol {
+  padding-left: 1.5em;
+  }
+
+  .sidebar-section > *:not(p):not(ul):not(ol):not(blockquote) {
+  margin-top: 10px;
+  }
+
+  .layout {
+  width: 1200px;
+  display: grid;
+  grid-gap: var(--margin);
+  grid-template: "header header" auto "leftSidebar main" auto "leftSidebar1 main" auto "leftSidebar2 main" auto "leftSidebar3 main" auto "leftSidebar4 main" auto "leftSidebar5 main" auto "footer footer" auto / var(--sidebar-width) auto;
+  /* Confused by the grid? Check out my tutorial: https://petrapixel.neocities.org/coding/positioning-tutorial#grid */
+}
+
+main {
+  grid-area: main;
+  overflow-y: auto;
+  padding: var(--padding);
+  background: var(--content-background-color);
+  border: var(--border);
+  border-radius: var(--round-borders);
+}
+/* -------------------------------------------------------- */
+/* HEADER */
+/* -------------------------------------------------------- */
+
+header {
+  grid-area: header;
+  font-size: 1.2em;
+  border: var(--border);
+  border-radius: var(--round-borders);
+  background: var(--content-background-color);
+}
+
+.header-content {
+  padding: var(--padding);
+}
+
+.header-title {
+  font-family: var(--heading-font);
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+.header-image img {
+  width: 100%;
+  height: auto;
+}
+
+  body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  font-size: var(--font-size);
+  margin: 0;
+  padding: var(--margin);
+  color: var(--text-color);
+  font-family: var(--font);
+  line-height: 1.2;
+  background: var(--background-color);
+  background-image: url("");
   
+}
+
+  /* -------------------------------------------------------- */
+/* ACCESSIBILITY */
+/* -------------------------------------------------------- */
+
+/* please do not remove this. */
+
+#skip-to-content-link {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: inline-block;
+  padding: 0.375rem 0.75rem;
+  line-height: 1;
+  font-size: 1.25rem;
+  background-color: var(--content-background-color);
+  color: var(--text-color);
+  transform: translateY(-3rem);
+  transition: transform 0.1s ease-in;
+  z-index: 99999999999;
+}
+
+#skip-to-content-link:focus,
+#skip-to-content-link:focus-within {
+  transform: translateY(0);
+}
+
   * {
     box-sizing: border-box;
   }
@@ -22,6 +193,8 @@ html {
     font-size: 2.5rem;
     color: rgb(228, 157, 126);
   }
+
+
 
   /*Cards*/
   .card {
