--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -9,56 +9,61 @@ interface Props {
 
 const { href, title, body, image } = Astro.props;
 ---
-<div>
+<div style="padding-left:0; padding-right:0; min-height:0; overflow:hidden; border-radius:5px">
 	<li class="link-card">
 		<a href={href}>
 			<img class="card-img" src={image} alt="project image">
 				<h2>
 					{title}
-			
 				</h2>
-				
 			</img>
-			<p style="padding-right: 4ch;">
+			<p style="padding-right: 2ch; padding-left: 2ch; padding-bottom:1ch">
 				{body}
 			</p>
 		</a>
-	
 	</li>
 	
 </div>
 <style>
 	.link-card {
-		list-style:none;
-		display:list-item;
-		padding-top: 1em;
+		display:inline-grid;
+		padding-top: 0em;
 		background-color: rgb(40, 25, 7);
 		background-image: none;
-		width:calc(20rem);
-		border-radius: 7px;
+		overflow:hidden;
+		min-height:0;
+		width:calc(19rem);
+		border-radius: 5px;
 		background-position: 70%;
 		opacity: .7;
 		transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-		box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.1);
+		text-overflow:hidden;
 	}
 	.link-card > a {
 		text-decoration: none;
+		overflow:hidden;
+		min-height:0;
+		display:grid;
 		line-height: 1.4;
 		padding-top: calc(1rem - 1px);
-		width: calc(22rem);
+		width: calc(19rem);
 		color: white;
 		opacity: 0.8;
-		
+		text-overflow:hidden;
 	}
 	h2 {
 		text-align: center;
 		font-size: 1.25rem;
 		color: rgb(228, 157, 126);
 		transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
+		margin-top:-.75em;
+		margin-bottom:.25em;
 	}
 	p {
-		text-align: left;
-		margin-top: -.5ch;
+		text-align: center;
+		overflow:hidden;
+		min-height:0;
+		margin-top: 0;
 		margin-bottom: 0;
 	}
 	.link-card:is(:hover, :focus-within) {
