--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,5 @@
 ---
+import { getCollection } from "astro:content";
 import Layout from '../layouts/Layout.astro';
 import PersonalBaseLayout from '../layouts/PersonalBaseLayout.astro';
 import Card from '../components/Card.astro';
@@ -8,15 +9,14 @@ import Tag from '../pages/tags/[tag].astro';
 import '../styles/global.css'
 
 const pageTitle = "My Thoughts";
-const allPosts = Object.values(import.meta.glob('../pages/blog/*.md'));
+const allPosts = await getCollection("blog");
 ---
-<PersonalBaseLayout pageTitle={pageTitle}>
-	<main>
+<PersonalBaseLayout pageTitle={pageTitle} style="min-height:0;">
         <em>Where my musings on creativity, notes on process, and progress updates live</em>
-			<!--<ul role="list" class="link-card-grid">
-				/*{allPosts.sort((a,b) => {
-					const DateA = a.frontmatter.pubDate.toLocaleDateString()
-					const DateB = b.frontmatter.pubDate.toLocaleDateString()
+			<ul role="list" class="link-card-grid">
+				{allPosts.sort((a,b) => {
+					const DateA = a.data.pubDate.toLocaleDateString()
+					const DateB = b.data.pubDate.toLocaleDateString()
 					if(DateA > DateB) {
 						return -1;
 					}
@@ -24,26 +24,22 @@ const allPosts = Object.values(import.meta.glob('../pages/blog/*.md'));
 						return 1;
 					}}
 				).map((post) => <Card
-				pubDate={card.frontmatter.pubDate}
-				title={card.frontmatter.title}
-				body={card.frontmatter.description}
-				href={`${card.frontmatter.title}`}
-				image={card.frontmatter.image.url}
+				pubDate={post.data.pubDate}
+				title={post.data.title}
+				body={post.data.description}
+				href={`${post.data.title}`}
+				image={post.data.image.url}
 				/>)}
-			</ul>-->
-		<!--<ul>
-			{allPosts.map((post) => <li><a href={post.url}>{post.frontmatter.title}</a></li>)}
-		</ul>-->
-
+			</ul>
 		  
 			<script>
 				import '../scripts/menu.js'
 			</script>
-	</main>
 </PersonalBaseLayout>
 
 <style>
 	main {
+		min-height:0;
 		margin: auto;
 		padding: 1rem;
 		padding-top: 0%;
@@ -59,6 +55,12 @@ const allPosts = Object.values(import.meta.glob('../pages/blog/*.md'));
 		line-height: 1;
 		text-align: center;
 		margin-bottom: 1em;
+	}
+	ul 
+	{
+		margin:0;
+		padding:0;
+		padding-top:1em;
 	}
 	em {
 		color: rgb(228, 157, 126);
