--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -1,11 +1,12 @@
 ---
+import { getCollection } from "astro:content";
 import BaseLayout from '../../layouts/BaseLayout.astro';
 
 export async function getStaticPaths() {
-  const allPosts = await Astro.glob('../blog/*.md');
-  const uniqueTags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())];
+  const allPosts = await getCollection("blog");
+  const uniqueTags = [...new Set(allPosts.map((post) => post.data.tags).flat())];
   return uniqueTags.map((tag) => {
-    const filteredPosts = allPosts.filter((post) => post.frontmatter.tags.includes(tag));
+    const filteredPosts = allPosts.filter((post) => post.data.tags.includes(tag));
     return {
       params: { tag },
       props: { posts: filteredPosts },
@@ -22,7 +23,7 @@ const { posts } = Astro.props;
   <p>Posts tagged with "{tag}"</p>
 
   <ul class="back">
-    {posts.map((post) => <ul><a href={post.url}>{post.frontmatter.title}</a> post.description</ul>)}
+    {posts.map((post) => <ul><a href={`/posts/${post.id}/`}>{post.data.title}</a> post.data.description</ul>)}
   </ul>
 </BaseLayout>
 
