added fonts, edited sidebars and hide a page

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -2,5 +2,7 @@
     <a href="/">Home</a>
     {/*<a href="/about/">About</a>*/}
     <a href="/blog/">Blog</a>
-    <a href="/works">Portfolio</a>
+    <!--<a href="/games/">Games(Dead Link)</a>
+    <a href="/characters/">Characters(Dead Link)</a>
+    <a href="/works">Portfolio</a>*/-->
 </div>
