--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,7 +18,7 @@
 
   /* Text: */
   --font: Arial, sans-serif;
-  --heading-font: Georgia, serif;
+  --heading-font: "Winky Rough Variable", sans-serif;
   --font-size: 14px;
 
   /* Other Settings: */
@@ -69,7 +69,7 @@ html {
   }
 
   .left-sidebar7 {
-  grid-area: leftSidebar;
+  grid-area: leftSidebar7;
   }
 
   .left-sidebar {
@@ -84,10 +84,17 @@ html {
   font-weight: bold;
   font-size: 1.2em;
   font-family: var(--heading-font);
+  margin-bottom: .2em;
+  text-align: center;
   }
 
   .sidebar-section:not(:last-child) {
   margin-bottom: 3em;
+  }
+
+  .sidebar-section{
+    border: var(--border);
+    border-radius: var(--round-borders);
   }
 
   .sidebar-section ul,
@@ -103,7 +110,7 @@ html {
   width: 1200px;
   display: grid;
   grid-gap: var(--margin);
-  grid-template: "header header" auto "leftSidebar main" auto "leftSidebar1 main" auto "leftSidebar2 main" auto "leftSidebar3 main" auto "leftSidebar4 main" auto "leftSidebar5 main" auto "footer footer" auto / var(--sidebar-width) auto;
+  grid-template: "header header" auto "leftSidebar main" auto "leftSidebar1 main" auto "leftSidebar2 main" auto "leftSidebar3 main" auto "leftSidebar4 main" auto "leftSidebar5 main" auto "leftSidebar6 main" auto "footer footer" auto / var(--sidebar-width) auto;
   /* Confused by the grid? Check out my tutorial: https://petrapixel.neocities.org/coding/positioning-tutorial#grid */
 }
 
