edited and added back about page, fixed error

--- a/src/layouts/PersonalBaseLayout.astro
+++ b/src/layouts/PersonalBaseLayout.astro
@@ -47,7 +47,7 @@ const { pageTitle } = Astro.props;
           <p>This site is under active construction, so if something looks off, it probably is! </p>
         </div>
       </aside>
-      <aside class="left-sidebar6">
+      <aside class="left-sidebar5">
         <div class="sidebar-title">Site Updates Feed</div>
         <div class="sidebar-section">
           
@@ -68,7 +68,7 @@ const { pageTitle } = Astro.props;
           	<a href="https://petrapixel.neocities.org/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/petracoding/petrapixel.neocities.org@latest/public/img/linkback.gif" alt="petrapixel"></a>
         </div>
       </aside>
-      <aside class="left-sidebar2">
+      <!--<aside class="left-sidebar2">
         <div class="sidebar-title">Media I'm Currently Enjoying/Last Enjoyed</div>
         <div class="sidebar-section">
           
@@ -80,15 +80,15 @@ const { pageTitle } = Astro.props;
             <li>Book: This Princess Kills Monsters & Indie Games: From Dream to Delivery</li>
           </ul>
         </div>
-      </aside>
-      <aside class="left-sidebar3">
+      </aside>-->
+      <aside class="left-sidebar2">
       <div class="sidebar-title">Currently Working On</div>
         <div class="sidebar-section">
           
           <img class="full-width-image" src="https://picsum.photos/id/141/1000/400">
         </div>
       </aside>
-      <aside class="left-sidebar4">
+      <aside class="left-sidebar3">
       <div class="sidebar-title">Credits</div>
         <div class="sidebar-section">
           
@@ -100,21 +100,17 @@ const { pageTitle } = Astro.props;
         </div>
       </aside>
 	
-      <aside class="left-sidebar5">
+      <aside class="left-sidebar4">
       <div class="sidebar-title">Todo List</div>
         <div class="sidebar-section">
           
           <ul>
-            <li><del>Fill out Todo List</del></li>
-            <li><del>Mark Sidebar Sections</del></li>
             <li><del>Separate Sidebar Sections</del></li>
             <li>Fill Out About Me</li>
-            <li><del>Add Under Construction Notice</del></li>
             <li>Add Projects I'm Currently Working On</li>
             <li>Add Dungeon Generator to This Website</li>
             <li>Finish Archive Page</li>
             <li>Add Character Hub</li>
-            <li><del>Fix Blog Hub Page</del></li>
             <li>Add Updates Feed</li>
           </ul>
         </div>
