--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,13 +9,10 @@ const pageTitle = "Home Page";
 ---
 
 <PersonalBaseLayout pageTitle={pageTitle}>
-		<h1>Welcome to my corner of the internet</h1>
+		<h1>Welcome to my cozy spot on the internet!</h1>
 		
-		<img width="300" height="400" src="/Self-Portrait-1.png" alt="a self portrait">
         <p>
-			From a young age I've always loved the feeling of creating things. Putting together small parts and making them work together has always been a magical, satisfying experience, whether 
-            that be turning lines of code into a program or taking disparate mechanics and turning them into a fun game. I am 
-            looking to use my passion and collected knowledge to work on software and video games.
+			This is the fun, personal side of my site where I can collect the projects I care about in one place, give updates and my personal thoughts on things. It's also a good place to collect all the different hobbies I have and hopefully make friends and find places of inspiration in a less mind-numbing way than social media and youtube. I'm taking my time on this site and kind of doing a learning in public type thing by just uploading whatever I end up finishing on days I work on this, so it'll be under construction for a long time. I hope you'll enjoy and stick with me nonetheless :).
         </p>
 		
 		<script>
