--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,6 +1,6 @@
 <div class="nav-links">
     <a href="/">Home</a>
-    {/*<a href="/about/">About</a>*/}
+    <a href="/about/">About</a>
     <a href="/blog/">Blog</a>
     <!--<a href="/games/">Games(Dead Link)</a>
     <a href="/characters/">Characters(Dead Link)</a>
