--- a/src/layouts/PersonalBaseLayout.astro
+++ b/src/layouts/PersonalBaseLayout.astro
@@ -52,7 +52,8 @@ const { pageTitle } = Astro.props;
         <div class="sidebar-section">
           
           <blockquote>
-            <p>8/02 - changed header font, fixed sidebars, hide portfolio page
+            <p>8/03 - added about page</p>
+            <p>8/02 - changed header font, fixed sidebars, hide portfolio page</p>
             <p>7/30 - fixed blog hub page and some styling</p>
             <p>7/29 - separated sidebar sections and started making collection</p>
             <p>7/28 - started customizing layout and diagnosing blog population issue</p>
@@ -68,19 +69,6 @@ const { pageTitle } = Astro.props;
           	<a href="https://petrapixel.neocities.org/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/petracoding/petrapixel.neocities.org@latest/public/img/linkback.gif" alt="petrapixel"></a>
         </div>
       </aside>
-      <!--<aside class="left-sidebar2">
-        <div class="sidebar-title">Media I'm Currently Enjoying/Last Enjoyed</div>
-        <div class="sidebar-section">
-          
-          <ul>
-            <li>Movie: Kpop Demon Hunters</li>
-            <li>Show:</li>
-            <li>Album: Ado's Best Adobum</li>
-            <li>Game: Patapon 1</li>
-            <li>Book: This Princess Kills Monsters & Indie Games: From Dream to Delivery</li>
-          </ul>
-        </div>
-      </aside>-->
       <aside class="left-sidebar2">
       <div class="sidebar-title">Currently Working On</div>
         <div class="sidebar-section">
@@ -96,6 +84,9 @@ const { pageTitle } = Astro.props;
             <div class="site-button">
           	  <p> Base layout: <a href="https://petrapixel.neocities.org/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/petracoding/petrapixel.neocities.org@latest/public/img/linkback.gif" alt="petrapixel"></a></p>
             </div>
+            <div class="site-button">
+              <p> Doll maker for self portrait: <a href="https://dollzrevival.neocities.org/" target="_blank"><img src="../DZRButton4.gif" alt="Dollz Revival"></a></p>
+            </div>
           </marquee>
         </div>
       </aside>
@@ -106,7 +97,7 @@ const { pageTitle } = Astro.props;
           
           <ul>
             <li><del>Separate Sidebar Sections</del></li>
-            <li>Fill Out About Me</li>
+            <li><del>Fill Out About Me</del></li>
             <li>Add Projects I'm Currently Working On</li>
             <li>Add Dungeon Generator to This Website</li>
             <li>Finish Archive Page</li>
